server/compilers/goLiteJS/src/test/ml1/invalid/decl31.go
// missing type in type declaration
package main

type num
